syntax = "proto3";

option java_multiple_files = true;

package com.grpc.user;

message User{
    int32 id=1;

    string name=2;

    int32 sex=3;

    string domain=4;

    string nick=5;

    string password=6;

    string salt=7;

    string phone=8;

    string email=9;

    int32 departid=10;

    string avatar=11;

    int32 status=12;

    int32 created=13;

    int32 updated=14;

    int32 push_shield_status=15;

    string sign_info=16;
}

message UserRequest {
    int32 id=1;

    string name=2;

    int32 sex=9;

    string nick=3;

    string password=4;

    string salt=5;

    string phone=6;

    string email=7;

    int32 departid=8;

    repeated User user=10;

    int32 areaType = 11;

    string provinceCode = 12;

    string cityCode = 13;

    string countyCode = 14;

    string county = 15;

    string townCode = 16;

    string town = 17;

    string villageCode = 18;

    string village = 19;

    int32 curPage = 20;

    int32 pageSize = 21;

    int32 updateUser = 22;

}

message UserResponse {
    int32 id=1;

    string name=2;

    int32 sex=10;

    string nick=3;

    string salt=5;

    string phone=6;

    string email=7;

    int32 departid=8;

    int32 status_id=9;

    repeated User user=11;

    string areaType = 12;

    string provinceCode = 13;

    string cityCode = 14;

    string countyCode = 15;

    string county = 16;

    string townCode = 17;

    string town = 18;

    string villageCode = 19;

    string mergerName = 20;

    string village = 21;

    int32 total=22;
}

service UserService{
    rpc listUser(UserRequest) returns (UserResponse);
    rpc addUser(UserRequest) returns (UserResponse);
    rpc modifyPassword(UserRequest) returns (UserResponse);
    rpc removeUser(UserRequest) returns (UserResponse);
    rpc modifyUser(UserRequest) returns (UserResponse);
}